# coralme

./: .gitignore  .readthedocs.yaml  Dockerfile-Alpine-3.6.2  Dockerfile-Anaconda3  Dockerfile-Python3.10  Dockerfile-Python3.7  Dockerfile-RHEL8  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  versions.sh
.github/workflows/: pypi.yml  release-pypi.yml  tests.yml
coralme/: __init__.py
coralme/builder/: .organism.py.kate-swp  __init__.py  column_format.json  compartments.py  curation.py  dna_replication.py  flat_files.py  formulas.py  gpr.py  helper_functions.py  homology.py  main.py  modifications.py  notes.py  organism.py  preprocess_inputs.py  ribosome.py  translation.py  translocation.py  trna_charging.py  troubleshooting.py
coralme/core/: __init__.py  component.py  diet.py  extended_classes.py  model.py  optimization.py  parameters.py  processdata.py  reaction.py
coralme/diets/: AGORADiets.txt
coralme/io/: JSONSCHEMA  dict.py  json.py  pickle.py
coralme/solver/: solver.py
coralme/tests/: __init__.py  conftest.py  test.ipynb  test_main.py  test_organism.py
coralme/util/: __init__.py  agora.py  building.py  change_model_genes.py  cli.py  compare.py  dogma.py  essentiality.py  excel2model.py  flux_analysis.py  manifest.json  massbalance.py  model2excel.py
docs/: AddingBioCycDatabase.ipynb  BasicInputs.ipynb  EfficientSolving.ipynb  FullReconstruction.ipynb  GettingStarted.ipynb  InspectingFluxes.ipynb  LoadingMEmodels.ipynb  ManualCuration.ipynb  ReconstructionOSM.ipynb  conf.py  coralMEArchitecture.ipynb  index.rst  requirements.txt
docs/bsubtilis/: coralme-config.yaml  curation_notes.json  curation_notes.txt  organism.json
docs/helper_files/: coralme-config.yaml  curation_notes.json  curation_notes.txt  input.json  reference-organisms.txt
shiny-app/: app.R  cli.py
tests/: conftest.py
tests/data/: TUs.txt  m_model.json  organism.json
tests/test_builder/: test_gpr.py  test_main.py  test_optimize.py  (+1 more)
(+117 files in other folders)
